// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSection component Hubspot FormSection component renders correctly 1`] = `
<div>
  <div
    class="Section-root-1044 Section-white-1048"
  >
    <div
      class="Container-root-1052"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="FormSection-hubSpot-1040"
          id="bmi-hubspot-form-no-id"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component Hubspot FormSection component renders correctly with sampleIds 1`] = `
<div>
  <div
    class="Section-root-1059 Section-white-1063"
  >
    <div
      class="Container-root-1067"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="FormSection-hubSpot-1055"
          id="bmi-hubspot-form-no-id"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component Hubspot FormSection component test submit when preview is on 1`] = `
<div>
  <div
    class="Section-root-1074 Section-white-1078"
  >
    <div
      class="Container-root-1082"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="FormSection-hubSpot-1070"
          id="bmi-hubspot-form-no-id"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component renders correctly 1`] = `
<div>
  <div
    class="Section-root-6 Section-white-10"
  >
    <div
      class="Container-root-14"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-root-16 FormSection-root-1 Form-rightAlignButton-17"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root MuiTextField-root TextField-root-24 MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                  data-shrink="false"
                  for="text"
                  id="text-label"
                >
                  Text
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="text"
                    name="text"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-27 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-29"
                    >
                      <span>
                        Text
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root MuiTextField-root TextField-root-24 MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                  data-shrink="false"
                  for="textarea"
                  id="textarea-label"
                >
                  Textarea
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
                >
                  <textarea
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                    id="textarea"
                    name="textarea"
                    rows="6"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-27 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-29"
                    >
                      <span>
                        Textarea
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root MuiTextField-root TextField-root-24 MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
                  data-shrink="false"
                  for="email"
                  id="email-label"
                >
                  Email
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="email"
                    name="email"
                    required=""
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-27 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-29"
                    >
                      <span>
                        Email
                         *
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-root-31"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-33 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-36"
                        data-indeterminate="false"
                        name="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    Checkbox
                  </span>
                </label>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root"
              >
                <p
                  class="MuiTypography-root CheckboxGroup-heading Typography-root-37 MuiTypography-body1"
                  data-testid="typography"
                >
                  CheckboxGroup
                </p>
                <div
                  class="MuiFormControl-root Checkbox-root-31 MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-33 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-36"
                          data-indeterminate="false"
                          name="CheckboxGroup1"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      CheckboxGroup1
                    </span>
                  </label>
                </div>
                <div
                  class="MuiFormControl-root Checkbox-root-31 MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-33 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-36"
                          data-indeterminate="false"
                          name="CheckboxGroup2"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      CheckboxGroup2
                    </span>
                  </label>
                </div>
                <div
                  class="MuiFormControl-root Checkbox-root-31 MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-33 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-36"
                          data-indeterminate="false"
                          name="CheckboxGroup3"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      CheckboxGroup3
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div>
                <p
                  class="MuiTypography-root Typography-root-37 MuiTypography-body1"
                  data-testid="typography"
                  style="padding-bottom: 15px;"
                >
                  Radio
                </p>
                <div
                  class="RadioGroup-root-45"
                >
                  <div
                    class="RadioGroup-container-46"
                  >
                    <div
                      class="RadioButton-root-48 RadioGroup-item-47"
                    >
                      <input
                        class="RadioButton-input-50"
                        id="radio-radio-Option1"
                        name="radio"
                        type="radio"
                        value="Option1"
                      />
                      <label
                        class="RadioButton-label-51"
                        for="radio-radio-Option1"
                      >
                        <div
                          aria-disabled="false"
                          class="MuiButtonBase-root RadioButton-text-52"
                          role="button"
                          tabindex="-1"
                        >
                          Option1
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </div>
                      </label>
                    </div>
                    <div
                      class="RadioButton-root-48 RadioGroup-item-47"
                    >
                      <input
                        class="RadioButton-input-50"
                        id="radio-radio-Option2"
                        name="radio"
                        type="radio"
                        value="Option2"
                      />
                      <label
                        class="RadioButton-label-51"
                        for="radio-radio-Option2"
                      >
                        <div
                          aria-disabled="false"
                          class="MuiButtonBase-root RadioButton-text-52"
                          role="button"
                          tabindex="-1"
                        >
                          Option2
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </div>
                      </label>
                    </div>
                    <div
                      class="RadioButton-root-48 RadioGroup-item-47"
                    >
                      <input
                        class="RadioButton-input-50"
                        id="radio-radio-Option3"
                        name="radio"
                        type="radio"
                        value="Option3"
                      />
                      <label
                        class="RadioButton-label-51"
                        for="radio-radio-Option3"
                      >
                        <div
                          aria-disabled="false"
                          class="MuiButtonBase-root RadioButton-text-52"
                          role="button"
                          tabindex="-1"
                        >
                          Option3
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </div>
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                  data-shrink="false"
                >
                  Select
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root Select-root-53 MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="mui-component-select-select"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="mui-component-select-select"
                    role="button"
                    tabindex="0"
                  >
                    <span>
                      ​
                    </span>
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    name="select"
                    tabindex="-1"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-27 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-29"
                    >
                      <span>
                        Select
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12"
            >
              <div
                class="MuiFormControl-root Upload-root-54 MuiFormControl-fullWidth"
              >
                <div>
                  <label
                    for="upload"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root Button-root-74 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label Button-label-77"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                          />
                        </svg>
                        Upload
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                  <input
                    accept=".pdf, .jpg, .jpeg, .png"
                    class="Upload-input-65"
                    data-testid="upload"
                    id="upload"
                    multiple=""
                    type="file"
                  />
                  <p
                    class="MuiTypography-root Upload-mobileInstructions-64 Typography-root-37 MuiTypography-body1"
                    data-testid="typography"
                  >
                    MC: form.upload.supportedFormats: .pdf, .jpg, .jpeg, .png. MC: form.upload.maxSize: 5.2MB
                  </p>
                </div>
                <div />
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <p
                class="MuiTypography-root Typography-root-37 MuiTypography-body1"
                data-testid="typography"
              >
                <span>
                  Hubspot text
                </span>
              </p>
              <div
                class="MuiInputBase-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input"
                  name="hubspot-text"
                  type="hidden"
                  value="Hubspot text"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiInputBase-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input"
                  name="hubspot-hidden"
                  type="hidden"
                  value="Hubspot hidden"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-root-31"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-33 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-36"
                        data-indeterminate="false"
                        name="hubspot-checkbox"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span>
                      Hubspot checkbox
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-21 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-root-31"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-33 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-36"
                        data-indeterminate="false"
                        name="hubspot-checkbox"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span>
                      Hubspot checkbox
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="Form-buttonWrapper-19"
          >
            <button
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root Button-root-74 MuiButton-contained Button-contained-76 Form-button-18 MuiButton-containedPrimary Mui-disabled Mui-disabled"
              data-action="Test form"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              <span
                class="MuiButton-label Button-label-77"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-37 MuiTypography-body1"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-94 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-94 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component renders correctly for dialog 1`] = `
<div>
  <div
    class="Section-white-1138"
  >
    <div
      class="Container-root-1142"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="FormSection-hubSpot-1130 FormSection-dialog-1131"
          id="bmi-hubspot-form-no-id"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test convertMarkdownLinksToAnchorLinks function with link in label 1`] = `
<div>
  <div
    class="Section-root-913 Section-white-917"
  >
    <div
      class="Container-root-921"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-root-923 FormSection-root-908 Form-rightAlignButton-924"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-item-928 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-root-930"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-932 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-935"
                        data-indeterminate="false"
                        name="checkbox-wih-link"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    I agree with BMI's 
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-936 Anchorlink MuiTypography-colorPrimary"
                      href="https://google.co.uk"
                      rel="noopener"
                      target="_blank"
                    >
                      <span>
                        Data Protection Policy
                      </span>
                    </a>
                    
                  </span>
                </label>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-item-928 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-root-930"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-932 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-935"
                        data-indeterminate="false"
                        name="checkbox-wih-link"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    I agree with BMI's 
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-936 Anchorlink MuiTypography-colorPrimary"
                      href="http://www.bmigroup.com"
                      target="_blank"
                    >
                      <span>
                        Data Protection Policy
                      </span>
                    </a>
                    
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="Form-buttonWrapper-926"
          >
            <button
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root Button-root-942 MuiButton-contained Button-contained-944 Form-button-925 MuiButton-containedPrimary"
              data-action="Test form"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label Button-label-945"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-962 MuiTypography-body1"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-936 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-936 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test convertMarkdownLinksToAnchorLinks function with no label 1`] = `
<div>
  <div
    class="Section-root-851 Section-white-855"
  >
    <div
      class="Container-root-859"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-root-861 FormSection-root-846 Form-rightAlignButton-862"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-item-866 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-root-868"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-870 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-873"
                        data-indeterminate="false"
                        name="checkbox-null-label"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  />
                </label>
              </div>
            </div>
          </div>
          <div
            class="Form-buttonWrapper-864"
          >
            <button
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root Button-root-874 MuiButton-contained Button-contained-876 Form-button-863 MuiButton-containedPrimary"
              data-action="Test form"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label Button-label-877"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-894 MuiTypography-body1"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-902 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-902 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test handleEmailValidation with correct email 1`] = `
<div>
  <div
    class="Section-root-268 Section-white-272"
  >
    <div
      class="Container-root-276"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-root-278 FormSection-root-263 Form-rightAlignButton-279"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-item-283 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root MuiTextField-root TextField-root-286 MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  for="email"
                  id="email-label"
                >
                  Email
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="email"
                    name="email"
                    required=""
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-289 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-291 PrivateNotchedOutline-legendNotched-292"
                    >
                      <span>
                        Email
                         *
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Form-buttonWrapper-281"
          >
            <button
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root Button-root-293 MuiButton-contained Button-contained-295 Form-button-280 MuiButton-containedPrimary"
              data-action="Test form"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label Button-label-296"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-313 MuiTypography-body1"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-321 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-321 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test handleEmailValidation with incorrect email 1`] = `
<div>
  <div
    class="Section-root-204 Section-white-208"
  >
    <div
      class="Container-root-212"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-root-214 FormSection-root-199 Form-rightAlignButton-215"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-item-219 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12"
            >
              <div
                class="MuiFormControl-root MuiTextField-root TextField-root-222 TextField-textFieldError-224 MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  for="email"
                  id="email-label"
                >
                  Email
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error Mui-error"
                  >
                     
                    *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <input
                    aria-describedby="email-helper-text"
                    aria-invalid="true"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    id="email"
                    name="email"
                    required=""
                    type="text"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root TextField-error-221"
                      focusable="false"
                      style="color: red;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 11c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
                      />
                    </svg>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-225 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-227 PrivateNotchedOutline-legendNotched-228"
                    >
                      <span>
                        Email
                         *
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
                  id="email-helper-text"
                >
                  MC: errors.emailInvalid
                </p>
              </div>
            </div>
          </div>
          <div
            class="Form-buttonWrapper-217"
          >
            <button
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root Button-root-229 MuiButton-contained Button-contained-231 Form-button-216 MuiButton-containedPrimary Mui-disabled Mui-disabled"
              data-action="Test form"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              <span
                class="MuiButton-label Button-label-232"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-249 MuiTypography-body1"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-257 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-257 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test multiply options in a checkbox group 1`] = `
<div>
  <div
    class="Section-root-982 Section-white-986"
  >
    <div
      class="Container-root-990"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-root-992 FormSection-root-977 Form-rightAlignButton-993"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-item-997 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root"
              >
                <p
                  class="MuiTypography-root CheckboxGroup-heading Typography-root-1001 MuiTypography-body1"
                  data-testid="typography"
                >
                  Pizza
                </p>
                <div
                  class="MuiFormControl-root Checkbox-root-999 MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1009 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-1012"
                          data-indeterminate="false"
                          name="Parma"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Parma
                    </span>
                  </label>
                </div>
                <div
                  class="MuiFormControl-root Checkbox-root-999 MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1009 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-1012"
                          data-indeterminate="false"
                          name="Caprize"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Caprize
                    </span>
                  </label>
                </div>
                <div
                  class="MuiFormControl-root Checkbox-root-999 MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1009 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-1012"
                          data-indeterminate="false"
                          name="Margarita"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Margarita
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Form-buttonWrapper-995"
          >
            <button
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root Button-root-1013 MuiButton-contained Button-contained-1015 Form-button-994 MuiButton-containedPrimary"
              data-action="Test form"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label Button-label-1016"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-1001 MuiTypography-body1"
          data-testid="typography"
        >
          Dette nettstedet er beskyttet av reCAPTCHA og Googles 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-1033 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy?hl=no-nb"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Personvernregler
            </span>
          </a>
           og 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-1033 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms?hl=no-nb"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Vilkår for bruk
            </span>
          </a>
           gjelder.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test upload input with large file 1`] = `
<div>
  <div
    class="Section-root-332 Section-white-336"
  >
    <div
      class="Container-root-340"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-root-342 FormSection-root-327 Form-rightAlignButton-343"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-item-347 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Upload-root-349 MuiFormControl-fullWidth"
              >
                <div>
                  <label
                    for="upload"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root Button-root-369 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label Button-label-372"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                          />
                        </svg>
                        Upload
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                  <input
                    accept=".pdf, .jpg, .jpeg, .png"
                    class="Upload-input-360"
                    data-testid="upload"
                    id="upload"
                    multiple=""
                    type="file"
                  />
                  <p
                    class="MuiTypography-root Upload-mobileInstructions-359 Typography-root-389 MuiTypography-body1"
                    data-testid="typography"
                  >
                    MC: form.upload.supportedFormats: .pdf, .jpg, .jpeg, .png. MC: form.upload.maxSize: 1MB
                  </p>
                </div>
                <div>
                  <div
                    class="Upload-file-361"
                    data-testid="test-file"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root Upload-fileDisplay-364"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
                      />
                    </svg>
                    <div
                      class="Upload-fileInfoWrapper-367"
                    >
                      <p
                        class="MuiTypography-root Upload-filename-362 Typography-root-389 MuiTypography-body1"
                        data-testid="typography"
                      >
                        fileName
                      </p>
                      <p
                        class="MuiTypography-root Upload-error-365 Typography-root-389 MuiTypography-body1"
                        data-testid="typography"
                      >
                        MC: errors.maxSize
                      </p>
                    </div>
                    <button
                      aria-label="Remove file"
                      class="MuiButtonBase-root MuiIconButton-root IconButton-root-380 iconButton IconButton-medium-386 IconButton-text-382 Upload-deleteIcon-366"
                      data-testid="file-delete"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Form-buttonWrapper-345"
          >
            <button
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root Button-root-369 MuiButton-contained Button-contained-371 Form-button-344 MuiButton-containedPrimary"
              data-action="Test form"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label Button-label-372"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-389 MuiTypography-body1"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-397 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-397 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test upload input with no maxSize 1`] = `
<div>
  <div
    class="Section-root-484 Section-white-488"
  >
    <div
      class="Container-root-492"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-root-494 FormSection-root-479 Form-rightAlignButton-495"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-item-499 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Upload-root-501 MuiFormControl-fullWidth"
              >
                <div>
                  <label
                    for="upload"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root Button-root-521 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label Button-label-524"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                          />
                        </svg>
                        Upload
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                  <input
                    accept=".pdf, .jpg, .jpeg, .png"
                    class="Upload-input-512"
                    data-testid="upload"
                    id="upload"
                    multiple=""
                    type="file"
                  />
                  <p
                    class="MuiTypography-root Upload-mobileInstructions-511 Typography-root-541 MuiTypography-body1"
                    data-testid="typography"
                  >
                    MC: form.upload.supportedFormats: .pdf, .jpg, .jpeg, .png. MC: form.upload.maxSize: 1MB
                  </p>
                </div>
                <div />
              </div>
            </div>
          </div>
          <div
            class="Form-buttonWrapper-497"
          >
            <button
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root Button-root-521 MuiButton-contained Button-contained-523 Form-button-496 MuiButton-containedPrimary"
              data-action="Test form"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label Button-label-524"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-541 MuiTypography-body1"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-549 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-549 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test upload input with small file 1`] = `
<div>
  <div
    class="Section-root-408 Section-white-412"
  >
    <div
      class="Container-root-416"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-root-418 FormSection-root-403 Form-rightAlignButton-419"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-item-423 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Upload-root-425 MuiFormControl-fullWidth"
              >
                <div>
                  <label
                    for="upload"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root Button-root-445 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label Button-label-448"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                          />
                        </svg>
                        Upload
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                  <input
                    accept=".pdf, .jpg, .jpeg, .png"
                    class="Upload-input-436"
                    data-testid="upload"
                    id="upload"
                    multiple=""
                    type="file"
                  />
                  <p
                    class="MuiTypography-root Upload-mobileInstructions-435 Typography-root-465 MuiTypography-body1"
                    data-testid="typography"
                  >
                    MC: form.upload.supportedFormats: .pdf, .jpg, .jpeg, .png. MC: form.upload.maxSize: 1MB
                  </p>
                </div>
                <div>
                  <div
                    class="Upload-file-437"
                    data-testid="test-file"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root Upload-fileDisplay-440"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
                      />
                    </svg>
                    <div
                      class="Upload-fileInfoWrapper-443"
                    >
                      <p
                        class="MuiTypography-root Upload-filename-438 Typography-root-465 MuiTypography-body1"
                        data-testid="typography"
                      >
                        fileName
                      </p>
                      <p
                        class="MuiTypography-root Upload-fileSize-439 Typography-root-465 MuiTypography-body1"
                        data-testid="typography"
                      >
                        0KB
                      </p>
                    </div>
                    <button
                      aria-label="Remove file"
                      class="MuiButtonBase-root MuiIconButton-root IconButton-root-456 iconButton IconButton-medium-462 IconButton-text-458 Upload-deleteIcon-442"
                      data-testid="file-delete"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Form-buttonWrapper-421"
          >
            <button
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root Button-root-445 MuiButton-contained Button-contained-447 Form-button-420 MuiButton-containedPrimary"
              data-action="Test form"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label Button-label-448"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-465 MuiTypography-body1"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-473 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-473 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;
